--- a/src/Busybee/HomeBundle/Resources/views/Default/scripts.html.twig
+++ b/src/Busybee/HomeBundle/Resources/views/Default/scripts.html.twig
@@ -3,7 +3,7 @@
 ================================================== -->
 <!-- Placed at the end of the document so the pages load faster -->
 {% javascripts
-	'%kernel.root_dir%/../vendor/components/jquery/jquery.min.js' 
+'js/jquery.min.js'
 	'%kernel.root_dir%/../vendor/twbs/bootstrap/dist/js/bootstrap.min.js' 
 	'js/bootstrap-submenu.min.js' 
 	'js/ie10-viewport-bug-workaround.js'
