--- a/src/Busybee/InstituteBundle/Resources/views/Calendar/calendarMenu.html.twig
+++ b/src/Busybee/InstituteBundle/Resources/views/Calendar/calendarMenu.html.twig
@@ -1,8 +1,8 @@
-{% trans_default_domain "BusybeeInstituteBundle" %}
-
-		<button title="{{ 'calendar.year.return'|trans}}" type="button" class="halflings halflings-hand-left btn btn-primary" onClick="window.open('{{ path('calendar_years') }}','_self')" style="float: right"></button>
-		{% if id != 'Add' %}
-			<button title="{{ 'year.add.title'|trans}}" type="button" class="halflings halflings-plus-sign btn btn-primary" onClick="window.open('{{ path('year_edit', {'id': 'Add'}) }}','_self')" style="float: right"></button>
-		{% endif %}
-		<button title="{{ 'form.reset.button'|trans({}, 'BusybeeHomeBundle') }}" type="button" onClick="location.href='{{ path('year_edit', {'id': id}) }}'" class="halflings halflings-remove-circle btn btn-info" style="float: right"></button>
-		<button title="{{ 'form.save'|trans({}, 'BusybeeHomeBundle')}}" type="submit" class="halflings halflings-save btn btn-success" style="float: right"></button>
+{% set h3Content = '' %}
+{% set h3Content = h3Content ~ returnButton({'windowOpen': {'route': path('calendar_years')}}) %}
+{% if id != 'Add' %}
+    {% set h3Content = h3Content ~ addButton({'windowOpen': {'route': path('year_edit', {'id': 'Add'})}}) %}
+{% endif %}
+{% set h3Content = h3Content ~ resetButton() %}
+{% set h3Content = h3Content ~ saveButton() %}
+{% include '@BusybeeHome/Page/panelStart.html.twig' with {'header': header, 'transDomain': 'BusybeeInstituteBundle'} %}
