--- a/src/Busybee/InstituteBundle/Resources/views/Calendar/term.html.twig
+++ b/src/Busybee/InstituteBundle/Resources/views/Calendar/term.html.twig
@@ -2,38 +2,31 @@
 
 {% trans_default_domain "BusybeeInstituteBundle" %}
 
-{% form_theme form "BusybeeFormBundle:Template:bootstrap.html.twig" %}
+{% block term_label %}{% endblock %}
+{% block term_errors %}{% endblock %}
 
-
-		<div class="panel panel-info busybee-panel">
-			<div class="panel-heading">
-				<h3 class="panel-title">{% if form.name.vars.value is empty %}{{ 'term.add'|trans}}{% else %}{{ form.name.vars.value }}{% endif %}
-				{% if form.vars.value.id is defined and form.vars.value.canDelete() %}
-					<button title="{{ 'term.delete.title'|trans}}" type="button" class="halflings halflings-erase btn btn-danger" onclick="confirmTermDelete('{{ path('term_delete', {'id': form.vars.value.id, 'year': id}) }}')" style="float: right ; "></button>
-					<button title="{{ 'term.add'|trans}}" type="button" class="halflings halflings-plus-sign btn btn-info addTermButton" style="float: right"></button>
-				{% else %}
-					<button title="{{ 'term.delete.title'|trans}}" type="button" class="halflings halflings-erase btn btn-danger" id="deleteTermButton" style="float: right ; "></button>
-                {% endif %}
-				<button title="{{ 'form.save'|trans({}, 'BusybeeHomeBundle')}}" type="submit" class="halflings halflings-save btn btn-success" style="float: right"></button>
-				</h3>
+{% block term_widget %}
+    {% if form.name.vars.value is empty %}{% set termTitle = 'term.add'|trans %}{% else %}{% set termTitle = form.name.vars.value %}{% endif %}
+    {% set h3Content = '<div class="collection-actions">' %}
+    {% set h3Content = h3Content ~ deleteButton({'title': 'term.delete.title', 'transDomain': 'BusybeeInstituteBundle', 'class': 'halflings halflings-erase btn btn-warning collection-remove collection-action', 'style': 'float: right; margin-top: -28px;'}) %}
+    {% set h3Content = h3Content ~ '</div>' %}
+    {% include '@BusybeeHome/Page/panelStart.html.twig' with {'header': termTitle, 'panelStyle': 'info'} %}
+	<div class="container-fluid">
+		<div class="row">
+			<div class="col-sm-2 well">
+                {{ form_row(form.name) }}
 			</div>
-			<div class="panel-body">
-				<div class="container-fluid">
-					<div class="row">
-						<div class="col-sm-4 well">
-							{{ form_row(form.name) }}
-						</div>
-						<div class="col-sm-2 well">
-							{{ form_row(form.nameShort) }}
-						</div>
-						<div class="col-sm-3 well">
-							{{ form_row(form.firstDay) }}
-						</div>
-						<div class="col-sm-3 well">
-							{{ form_row(form.lastDay) }}
-							{{ form_widget(form.year, {'value': id}) }}
-						</div>
-					</div>
+			<div class="col-sm-2 well">
+                {{ form_row(form.nameShort) }}
+			</div>
+			<div class="col-sm-4 well">
+                {{ form_row(form.firstDay) }}
+			</div>
+			<div class="col-sm-4 well">
+                {{ form_row(form.lastDay) }}
+                {{ form_row(form.year) }}
 				</div>
 			</div>
 		</div>
+    {% include '@BusybeeHome/Page/panelEnd.html.twig' %}
+{% endblock term_widget %}
