--- a/src/Busybee/InstituteBundle/Resources/views/Calendar/year.html.twig
+++ b/src/Busybee/InstituteBundle/Resources/views/Calendar/year.html.twig
@@ -4,29 +4,21 @@
 
 {% form_theme form "BusybeeFormBundle:Template:bootstrap.html.twig" %}
 
-<div class="panel panel-primary busybee-panel">
-	<div class="panel-heading">
-		<h3 class="panel-title">{{ 'calendar.year.title'|trans}}
-		{% include 'BusybeeInstituteBundle:Calendar:calendarMenu.html.twig' %}
-		</h3>
-	</div>
-	<div class="panel-body">
-		<div class="container-fluid">
-			<div class="row">
-				<div class="col-sm-3 well">
-					{{ form_row(form.name) }}
-				</div>
-				<div class="col-sm-3 well">
-					{{ form_row(form.firstDay) }}
-				</div>
-				<div class="col-sm-3 well">
-					{{ form_row(form.lastDay) }}
-				</div>
-				<div class="col-sm-3 well">
-					{{ form_row(form.status) }}
-				</div>
+{% include '@BusybeeInstitute/Calendar/calendarMenu.html.twig' with {'header': 'calendar.year.title'} %}
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-sm-3 well">
+            {{ form_row(form.name) }}
+        </div>
+        <div class="col-sm-3 well">
+            {{ form_row(form.firstDay) }}
+        </div>
+        <div class="col-sm-3 well">
+            {{ form_row(form.lastDay) }}
+        </div>
+        <div class="col-sm-3 well">
+            {{ form_row(form.status) }}
 			</div>
 		</div>
-		{% include 'BusybeeInstituteBundle:Calendar:calendarMenu.html.twig' %}
 	</div>
-</div>
+{% include '@BusybeeHome/Page/panelEnd.html.twig' %}
