--- a/src/Busybee/InstituteBundle/Resources/views/Calendar/years.html.twig
+++ b/src/Busybee/InstituteBundle/Resources/views/Calendar/years.html.twig
@@ -9,52 +9,49 @@
 {% block headerLead %}{{ 'years.description'|trans }}{% endblock headerLead %}
 
 {% block contentContainer %}
-<div class="panel panel-primary busybee-panel">
-	<div class="panel-heading">
-		<h3 class="panel-title">{{ 'years.list'|trans}}
-			<button title='{{ 'year.add.title'|trans}}' type="button" class="halflings halflings-plus-sign btn btn-primary" onClick="window.open('{{ path('year_edit', {'id': 'Add'}) }}','_self')" style="float: right"></button>
-		</h3>
-	</div>
-	<div class="panel-body">
-		{% if Years|length > 0 %}
-			<div class="row row-header">
-				<div class="col-sm-2 col-md-2">
-					{{ 'calendar.header.name'|trans }}
-				</div>
-				<div class="col-sm-3 col-md-3">
-					{{ 'calendar.header.firstDay'|trans }}
-				</div>
-				<div class="col-sm-3 col-md-3">
-					{{ 'calendar.header.lastDay'|trans }}
-				</div>
-				<div class="col-sm-4 col-md-4">
-					{{ 'calendar.header.action'|trans }}
-				</div>
-			</div>
-			{% for Year in Years %}
-				<div class="row row-striped{% if Year.status == 'current' %} alert-success{% endif %}">
-					<div class="col-sm-2 col-md-2">
-						{{ Year.name }}
-					</div>
-					<div class="col-sm-3 col-md-3">
-						{{ Year.firstDay|date("D, jS F Y") }}
-					</div>
-					<div class="col-sm-3 col-md-3">
-						{{ Year.lastDay|date|date("D, jS F Y") }}
-					</div>
-					<div class="col-sm-4 col-md-4">
-						<button title='{{ 'year.edit.title'|trans}}' type="button" class="halflings halflings-edit btn btn-warning" onClick="window.open('{{ path('year_edit', {'id': Year.id}) }}','_self')"></button>
-						<button title='{{ 'year.delete.title'|trans}}' type="button" class="halflings halflings-erase btn btn-{% if Year.canDelete %}danger"{% else %}default" disabled{% endif %} onclick="confirmDelete('{{ path('year_delete', {'id': Year.id}) }}')"></button>
-						<button title='{{ 'year.calendar.button'|trans}}' type="button" class="halflings halflings-calendar btn btn-info" onClick="window.open('{{ path('year_calendar', {'id': Year.id}) }}','_self')"></button>
-
-					</div>
-				</div>
-			{% endfor %}
-		{% else %}
-			<p class="alert alert-warning">{{ 'years.empty'|trans }}<p>
-		{% endif %}
-	</div>
-</div>
+    {% set h3Content = addButton({'windowOpen': {'route': path('year_edit', {'id': 'Add'})}}) %}
+    {% include '@BusybeeHome/Page/panelStart.html.twig' with {'transDomain': 'BusybeeInstituteBundle', 'header': 'years.list'} %}
+    <div class="container-fluid">
+        {% if Years|length > 0 %}
+        <div class="row row-header">
+            <div class="col-sm-2 col-md-2">
+                {{ 'calendar.header.name'|trans }}
+            </div>
+            <div class="col-sm-3 col-md-3">
+                {{ 'calendar.header.firstDay'|trans }}
+            </div>
+            <div class="col-sm-3 col-md-3">
+                {{ 'calendar.header.lastDay'|trans }}
+            </div>
+            <div class="col-sm-4 col-md-4">
+                {{ 'calendar.header.action'|trans }}
+            </div>
+        </div>
+        {% for Year in Years %}
+            <div class="row row-striped{% if Year.status == 'current' %} alert-success{% endif %}">
+                <div class="col-sm-2 col-md-2">
+                    {{ Year.name }}
+                </div>
+                <div class="col-sm-3 col-md-3">
+                    {{ Year.firstDay|date("D, jS F Y") }}
+                </div>
+                <div class="col-sm-3 col-md-3">
+                    {{ Year.lastDay|date|date("D, jS F Y") }}
+                </div>
+                <div class="col-sm-4 col-md-4">
+                    {{ editButton({'style': '', 'windowOpen': {'route': path('year_edit', {'id': Year.id})}, 'title': 'year.edit.title', 'class': 'btn btn-warning halflings halflings-edit', 'transDomain': 'BusybeeInstituteBundle'})|raw }}
+                    {% set additional = 'onclick="confirmDelete(\'' ~ path('year_delete', {'id': Year.id}) ~ '\')"' %}
+                    {% if not Year.canDelete %}{% set additional = additional ~ ' disabled' %}{% endif %}
+                    {{ deleteButton({'additional': additional, 'transDomain': 'BusybeeInstituteBundle', 'style': ''})|raw }}
+                    {{ miscButton({'title': 'year.calendar.button', 'type': 'button', 'class': 'halflings halflings-calendar btn btn-info', 'style': '', 'transDomain': 'BusybeeInstituteBundle', 'windowOpen': {'route': path('year_calendar', {'id': Year.id})}})|raw }}
+                </div>
+            </div>
+        {% endfor %}
+        {% else %}
+        <p class="alert alert-warning">{{ 'years.empty'|trans }}<p>
+            {% endif %}
+    </div>
+    {% include '@BusybeeHome/Page/panelEnd.html.twig' %}
 {% endblock contentContainer %}
 
 
